Tue Feb 17 15:31:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,xappy/unittests/field_groups.py: Patch
	  from Pablo Hoffman to return a dictionary of the groups, keyed by
	  group number.

Fri Feb 13 23:17:42 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,xappy/datastructures.py,xappy/searchconnection.py,
	  xappy/unittests/field_groups.py: Patch and unittest for bug with
	  field groups which contain duplicated data.  Thanks to Pablo
	  Hoffman for the fix and test.

Fri Feb 13 10:31:04 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/distance.py: Extend unittest to cover
	  max_range parameter.

Thu Feb 12 09:37:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/README: Fix typo.

Wed Feb 11 23:08:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update version of packages to get.

Wed Feb 11 22:35:21 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/README: Document the
	  "reversed" parameter to make_order.py

Wed Feb 11 21:23:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/README: Add instructions for
	  sortdatabase.

Wed Feb 11 18:59:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/Makefile,
	  external_posting_source/sortdatabase/make_order.py,
	  external_posting_source/sortdatabase/sortdatabase.cc: Much faster
	  sortdatabase code.  Reads documents in order, in big batches,
	  writes the documents to batch files, then reads each batch file,
	  sorts it, and writes the documents in it.

Fri Feb 06 11:55:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/sortdatabase.cc: Separate
	  reading the documents from writing them, in the hope of a